[package]
name = "unicode_util"
version = "0.1.0"
authors = ["blargg <tomjankauski@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
fst = "0.3.5"
fst-regex = "0.2.2"

[build-dependencies]
fst = "0.3.5"
xml-rs = "0.8"
