[package]
name = "unicode_util"
version = "0.1.0"
authors = ["blargg <tomjankauski@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
dirs = "2.0.2"
fst = "0.3.5"
fst-regex = "0.2.2"
log = "0.4.8"
serde = { version = "1.0", features = [ "derive"] }
toml = "0.5.3"

[build-dependencies]
fst = "0.3.5"
xml-rs = "0.8"

[dependencies.cursive]
version = "0.13.0"
default-features = false
features = ["termion-backend"]
